[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/AddHighscore.gd" type="Script" id=1]
[ext_resource path="res://addons/gamejolt_api_v2/main.gd" type="Script" id=2]
[ext_resource path="res://addons/gamejolt_api_v2/gj_icon.png" type="Texture" id=3]
[ext_resource path="res://Fonts/code_bold_big.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/code_bold.tres" type="DynamicFont" id=5]

[node name="AddHighscore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0313726, 0.905882, 0.972549, 0.180392 )

[node name="GameJoltAPI" type="HTTPRequest" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
private_key = "867141e4f6d7c303193c9be0d19e5523"
game_id = "403339"

[node name="NewHighscoreUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="NewHighscoreUI"]
margin_right = 1920.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 4 )
text = "New Highscore"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="NewHighscoreUI/Label"]

[node name="RegularScoreUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HighscoresButton" type="Button" parent="RegularScoreUI"]
anchor_right = 1.0
margin_left = 150.0
margin_top = 950.0
margin_right = 528.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
text = "Highscores"

[node name="NewGameButton" type="Button" parent="RegularScoreUI"]
anchor_right = 1.0
margin_left = 787.0
margin_top = 950.0
margin_right = 1092.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
text = "New game"

[node name="MainMenuButton" type="Button" parent="RegularScoreUI"]
anchor_right = 1.0
margin_left = 1400.0
margin_top = 950.0
margin_right = 1718.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
text = "Main Menu"

[connection signal="api_scores_fetched" from="GameJoltAPI" to="." method="_on_GameJoltAPI_api_scores_fetched"]
[connection signal="tween_completed" from="NewHighscoreUI/Label/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="RegularScoreUI/HighscoresButton" to="." method="_on_HighscoresButton_pressed"]
[connection signal="pressed" from="RegularScoreUI/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="RegularScoreUI/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
